vlib/v/checker/tests/misspelled_mod_const_should_have_suggestion.vv
import time

time.sleep(1 * time.secondz)
